# blue_archive_api-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: api_status.rs  clubs.rs  fetch_all_students.rs  fetch_currency.rs  fetch_enemies.rs  fetch_equipment.rs  fetch_equipment_by_id.rs  fetch_raids.rs  fetch_student.rs  fetch_students_under_clubs.rs  fetch_summons.rs  filtering_students.rs  get_all_students.rs  guessing_game.rs  japan_region.rs  passive_skills.rs  query_clubs.rs  query_weapons.rs  raids.rs  student_age.rs  student_fetcher.rs  student_filtering.rs  students.rs  trinity_strikers.rs
examples/blocking/: get_all_students.rs
src/: enums.rs  errors.rs  filter.rs  lib.rs  main.rs
src/api/: asynchronous.rs  currency.rs  enemy.rs  enums.rs  equipment.rs  errors.rs  filter.rs  mod.rs  raid.rs  student.rs  summon.rs
src/api/blocking/: currency.rs  enemy.rs  equipment.rs  mod.rs  raid.rs  student.rs  summon.rs
src/api/enums/: mod.rs  students.rs
src/api/fetcher/: mod.rs
src/api/query/: mod.rs
src/fetcher/: mod.rs  student.rs
src/filter/: mod.rs  student.rs
src/filters/: student.rs
src/serialization/: mod.rs
src/types/: api.rs  banners.rs  currency.rs  enemy.rs  equipment.rs  mod.rs  raids.rs  students.rs  summons.rs
src/types/students/: mod.rs  student.rs
tests/: currency_from_langs.rs  enemies_from_langs.rs  equipment_from_langs.rs  raids_from_langs.rs  status.rs  student_fetcher.rs  students.rs  students_from_langs.rs  summons_from_langs.rs
