[package]
name = "blue_archive"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
description = "A Blue Archive api wrapper for Rust, based off of SchaleDB's data: https://github.com/lonqie/SchaleDB"
readme = "README.md"
repository = "https://github.com/MerryweatherLost/blue_archive_api-rs"
categories = ["api-bindings"]
keywords = ["bluearchive", "SchaleDB"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rand = "0.8"
futures = "0.3"
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"