[package]
name = "blue_archive"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE"
description = "A Blue Archive api wrapper for Rust, based off of SchaleDB's data: https://github.com/lonqie/SchaleDB"
readme = "README.md"
repository = "https://github.com/MerryweatherLost/blue_archive_api-rs"
categories = ["api-bindings"]
keywords = ["bluearchive", "SchaleDB"]

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde-aux = { version = "4.4.0", default-features = false }

html-escape = "0.2"

rand = "0.8"

anyhow = "1"
thiserror = "1.0"

strum = "0.26"
strum_macros = "0.26"

# futures = "0.3"
# chrono = { version = "0.4", features = ["serde"] }
